# gostan

./: README.md  default.nix  gostan.cabal  release.nix
src/Data/List/: Gostan.hs
