name:                gostan
version:             0.1.0.0
synopsis:            gostan your lists
homepage:            https://github.com/bumbleblym/gostan
license:             BSD3
license-file:        LICENSE
author:              Benjamin Lim
maintainer:          bumbleblym@users.noreply.github.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.List.Gostan
  build-depends:
    base >=4.9 && <4.10,
    lens,
    transformers
  default-language:    Haskell2010
  ghc-options:
    -Wall
  default-extensions:
    CPP
